force-app/main/default/objects/order_custom__c/order_custom__c.object-meta.xml
<CustomObject>
    <label>order custom</label>
    <nameField>
        <label>order custom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>order customs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>