force-app/main/default/objects/order_custom__c/fields/Flat_Discount__c.field-meta.xml
<CustomField>
    <fullName>Flat_Discount__c</fullName>
    <label>Flat Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>