force-app/main/default/objects/order_custom__c/fields/Last_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Change__c</fullName>
    <label>Last Stage Change</label>
    <type>DateTime</type>
</CustomField>