force-app/main/default/objects/order_custom__c/fields/Offer_Available__c.field-meta.xml
<CustomField>
    <fullName>Offer_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Available</label>
    <type>Checkbox</type>
</CustomField>