force-app/main/default/objects/order_custom__c/fields/Percentage_Discount__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Discount__c</fullName>
    <label>Percentage Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>