force-app/main/default/objects/order_custom__c/fields/Stage_History__c.field-meta.xml
<CustomField>
    <fullName>Stage_History__c</fullName>
    <label>Stage History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>