force-app/main/default/objects/order_custom__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Percentage_Discount__c</columns>
    <columns>Offer_Type__c</columns>
    <columns>Offer_Price__c</columns>
    <columns>Original_Price__c</columns>
    <columns>Offer_Available__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>